# CyC_GroundVehicle

./: .gitmodules  CMakeLists.txt  README.md
Filter_Control_VehicleController/src/: CControllerPurePursuite.h  CMPCWrapper.h  CVehicleControlFilter.cpp  CVehicleControlFilter.h  helpers.cpp
Filter_Control_VehicleController/src/AcadoCodegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp
Filter_Control_VehicleSim/: CMakeLists.txt
Filter_Control_VehicleStateEstimation/src/: COdometryKalman.cpp  COdometryKalman.h  CVehicleStateEstimation.cpp  CVehicleStateEstimation.h  CVisualKalman.cpp  CVisualKalmanExtended.cpp
Filter_Control_VehicleStateEstimation/src/api/unity/: CStateEstimationUnityApi.h
etc/kinematics/vehicles/: vehicle_carla.conf  vehicle_raspberrypi_robot.conf
etc/missions/: dynamic_mission.csv
etc/missions/indoor/: active_slam.csv  ina.csv  l6.csv  l6_1.csv  l6_2.csv
etc/pipelines/: daemon.conf  slam.conf
src/Filter_Control_VehicleController/: CMakeLists.txt
src/Filter_Control_VehicleController/src/: CControllerPurePursuite.cpp  CMPCWrapper.cpp  CVehicleControlFilter.h  helpers.h  tu_CartPoleController.cpp  tu_VehicleController.cpp
src/Filter_Control_VehicleController/src/AcadoCodegen/: acado_solver.c
src/Filter_Control_VehicleSim/: CMakeLists.txt
src/Filter_Control_VehicleSim/src/: CVehicleSim.cpp  CVehicleSim.h
src/Filter_Control_VehicleStateEstimation/: CMakeLists.txt
src/Filter_Control_VehicleStateEstimation/src/: CGPSIMUOdometryKalman.cpp  CGPSIMUOdometryKalman.h  CVehicleStateEstimation.cpp  CVehicleStateEstimationFilter.cpp  CVehicleStateEstimationFilter.h  CVisualKalman.h  CVisualKalmanExtended.h
src/Filter_Control_VehicleStateEstimation/src/api/unity/: CStateEstimationUnityApi.cpp
src/Filter_HW_VehicleActuator/: CMakeLists.txt
src/Filter_HW_VehicleActuator/src/: CVehicleActuator.cpp  CVehicleActuator.h  tu_RaspberryPiRobotManualControl.cpp
src/Filter_HW_VehicleActuator/src/api/raspi/: CRotaryEncoder.cpp  CRotaryEncoder.h  CVehicleActuatorRaspiApi.cpp  CVehicleActuatorRaspiApi.h
src/Filter_HW_VehicleActuator/src/api/unity/: CVehicleActuatorUnityApi.cpp  CVehicleActuatorUnityApi.h
src/Filter_Terminal_Vehicle/: CMakeLists.txt
src/Filter_Terminal_Vehicle/src/: CTerminalVehicle.cpp  CTerminalVehicle.h
